<resources>
    <string name="app_name">AboutAppDevLib Demo</string>
    <string name="app_author">by E.J. Jiménez</string>
    <string name="app_description"><b>AboutAppDevLib</b> is a library to build easily a fully featured <i>About</i> section for your app. With a few lines of code you can create a screens with info about you, your app and third party libraries used.</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_privacy_url">http://ej3.000webhostapp.com/privacy/</string>
    <string name="drawer_profile_name">AboutAppDevLib</string>
    <string name="drawer_profile_email">by E.J. Jiménez</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_example_1">Fixed tabs</string>
    <string name="drawer_example_2">Scrollable tabs</string>
    <string name="drawer_example_3">Without tabs</string>
    <string name="drawer_example_4">Custom colors</string>
    <string name="drawer_about">About</string>
    <string name="drawer_faq">FAQ</string>
    <string name="drawer_license">License</string>
    <string name="home_example_1_title">Fixed tabs</string>
    <string name="home_example_1_description">Example with two fixed tabs using <i>AboutAppFragment</i> and <i>AboutDevFragment</i></string>
    <string name="home_example_2_title">Scrollable tabs</string>
    <string name="home_example_2_description">Example with 4 scrollable tabs in which the last one is the same <i>Fragment</i> used in the <i>Home</i> section</string>
    <string name="home_example_3_title">Without tabs</string>
    <string name="home_example_3_description">Example without tabs that show a simple developer info screen builded with <i>AboutDevFragment</i></string>
    <string name="home_example_4_title">Custom colors</string>
    <string name="home_example_4_description">Example that change the default colors used in the rest of examples</string>
    <string name="about_app_tab">App</string>
    <string name="about_app_name">AboutAppDevLib Demo</string>
    <string name="about_app_version">&lt;b>v%1$s&lt;/b> - %2$d</string>
    <string name="about_app_copyright">©2018 E.J. Jiménez</string>
    <string name="about_app_github">ej3dev/AboutAppDevLib</string>
    <string name="about_app_share_subject">Try AboutAppDevLib Demo</string>
    <string name="about_app_share_message">Please, take a look to AboutAppDevLib Demo:\n%s</string>
    <string name="about_app_thanks_title">Thanks</string>
    <string name="about_app_thanks_text">
    	&lt;b>Thanks to the people&lt;/b> who send me their ideas and comments to improve this lib.
    </string>
    <string name="about_app_changelog_title">Changelog</string>
    <string name="about_app_changelog_text">
		&lt;b>&lt;big>v1.2.0:&lt;/big> Tu.10-Apr-2018&lt;/b>
        &lt;br/>* Updated third party libraries
        &lt;br/>* Added "Rate this app" button
        &lt;br/>* Fixed NullPointerException when restore Fragments after long stay in background
        &lt;br/>
		&lt;br/>&lt;b>&lt;big>v1.1.4:&lt;/big> Tu.3-Apr-2018&lt;/b>
        &lt;br/>* Added support for HTML in custom CardView widgets
        &lt;br/>* Fixed minor bugs
        &lt;br/>
        &lt;br/>&lt;b>&lt;big>v1.1.2:&lt;/big> Su.1-Apr-2018&lt;/b>
		&lt;br/>* Updated third party libraries
        &lt;br/>* Changed ImageViews for Views in layout dividers
        &lt;br/>* Added screenshots to README file
        &lt;br/>* Fixed minor bugs
        &lt;br/>
        &lt;br/>&lt;b>&lt;big>v1.1.0:&lt;/big> Fr.16-Mar-2018&lt;/b>
		&lt;br/>* Added support for Frequently Asked Questions (FAQ)
        &lt;br/>
        &lt;br/>&lt;b>&lt;big>v1.0.0:&lt;/big> Th.15-Mar-2018&lt;/b>
		&lt;br/>* First public release of sample demo app at Google Play
        &lt;br/>* Source code published at GitHub
        &lt;br/>
		&lt;br/>&lt;b>&lt;big>v0.1.8:&lt;/big> We.14-Mar-2018&lt;/b>
		&lt;br/>* First beta release
    </string>
    <string name="about_dev_tab">Dev</string>
    <string name="about_dev_author">E.J. Jiménez</string>
    <string name="about_dev_info">Salamanca, Spain</string>
    <string name="about_dev_web">https://github.com/ej3dev</string>
    <string name="about_dev_github">ej3dev</string>
    <string name="about_dev_store">5497160455081780210</string>
    <string name="about_dev_other_apps">Other apps</string>
    <string name="about_dev_rea_package">net.ej3.apps.reminderalarm</string>
    <string name="about_dev_rea_name">Reminder Alarm</string>
    <string name="about_dev_rea_description">An advanced alarm app with cloud sync between your devices</string>
    <string name="about_dev_nac_package">net.ej3.nightalarmclock</string>
    <string name="about_dev_nac_name">Night Alarm Clock</string>
    <string name="about_dev_nac_description">The ultimate alarm clock for your nightstand</string>
    <string name="about_dev_aps_package">net.ej3.advancedpokerstats</string>
    <string name="about_dev_aps_name">Poker Stats &amp; Odds Calculator</string>
    <string name="about_dev_aps_description">The definitive app for calculating Texas Hold\'em poker stats &amp; odds</string>
    <string name="about_dev_sqr_package">net.ej3.games.squared</string>
    <string name="about_dev_sqr_name">Squared: Sliding Blocks Puzzle</string>
    <string name="about_dev_sqr_description">The evolution of the classic sliding blocks puzzle game</string>
    <string name="about_lib_tab">Lib</string>
    <string name="about_lib_info">This app uses the following third-party libraries. &lt;b>Thanks to its developers for their great work.&lt;/b></string>
    <string name="about_lib_libraries">Libraries</string>
    <string name="about_lib_aboutappdevlib_name">AboutAppDevLib</string>
    <string name="about_lib_aboutappdevlib_author">E.J. Jiménez</string>
    <string name="about_lib_aboutappdevlib_description">An easy to use library to build &lt;i>About screens&lt;/i> for your apps</string>
    <string name="about_lib_aboutappdevlib_url">https://github.com/ej3dev/AboutAppDevLib</string>
    <string name="about_lib_material_drawer_name">MaterialDrawer</string>
    <string name="about_lib_material_drawer_author">Mike Penz</string>
    <string name="about_lib_material_drawer_description">The flexible, easy to use, all in one drawer library for your Android project</string>
    <string name="about_lib_material_drawer_url">https://github.com/mikepenz/MaterialDrawer</string>
    <string name="about_lib_logger_name">Logger</string>
    <string name="about_lib_logger_author">Orhan Obut</string>
    <string name="about_lib_logger_description">Simple, pretty and powerful logger for android</string>
    <string name="about_lib_logger_url">https://github.com/orhanobut/logger</string>
    <string name="about_lib_leak_canary_name">LeakCanary</string>
    <string name="about_lib_leak_canary_author">Square</string>
    <string name="about_lib_leak_canary_description">A memory leak detection library for Android and Java</string>
    <string name="about_lib_leak_canary_url">https://github.com/square/leakcanary</string>
    <string name="about_faq_title">Frequently Asked Questions</string>
    <string name="about_faq_question_1">Is this screen built with &lt;b>AboutAppDevLib&lt;/b>?</string>
    <string name="about_faq_answer_1">Yes, this screen is built using &lt;i>AboutFaqFragment.Builder&lt;/i> class. The answers have been created with &lt;i>FaqCardView&lt;/i> widget</string>
    <string name="about_faq_question_2">Is &lt;b>AboutAppDevLib&lt;/b> open source?</string>
    <string name="about_faq_answer_2">Yes, you can clone or download &lt;b>AboutAppDevLib&lt;/b> source code from &lt;a href="https://github.com/ej3dev/AboutAppDevLib">https://github.com/ej3dev/AboutAppDevLib&lt;/a></string>
    <string name="about_faq_question_3">What is the Answer to the Ultimate Question of Life, The Universe, and Everything?</string>
    <string name="about_faq_answer_3">Forty two</string>
    <string name="about_faq_question_4">What is the most popular text paragraph for designers?</string>
    <string name="about_faq_answer_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>