<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/icon_app"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_icon"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView style="@style/home_title" android:text="@string/app_name"/>
                    <TextView style="@style/home_description" android:text="@string/app_author"/>
                    <TextView style="@style/home_description" android:text="@string/app_description"/>
                </LinearLayout>

            </RelativeLayout>

            <View style="@style/home_divider"/>

            <LinearLayout style="@style/home_container" android:id="@+id/lay_home_1">
                <TextView style="@style/home_title" android:text="@string/home_example_1_title"/>
                <TextView style="@style/home_description" android:text="@string/home_example_1_description"/>
            </LinearLayout>

            <View style="@style/home_divider"/>

            <LinearLayout style="@style/home_container" android:id="@+id/lay_home_2">
                <TextView style="@style/home_title" android:text="@string/home_example_2_title"/>
                <TextView style="@style/home_description" android:text="@string/home_example_2_description"/>
            </LinearLayout>

            <View style="@style/home_divider"/>

            <LinearLayout style="@style/home_container" android:id="@+id/lay_home_3">
                <TextView style="@style/home_title" android:text="@string/home_example_3_title"/>
                <TextView style="@style/home_description" android:text="@string/home_example_3_description"/>
            </LinearLayout>

            <View style="@style/home_divider"/>

            <LinearLayout style="@style/home_container" android:id="@+id/lay_home_4">
                <TextView style="@style/home_title" android:text="@string/home_example_4_title"/>
                <TextView style="@style/home_description" android:text="@string/home_example_4_description"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>